# trade-trace

./: .gitignore  LICENSE  README.md  example.py  main.py  pyproject.toml
src/: arbitrage.py  general.py  orders.py
